--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 			<a href="http://www..../contact">Contact</a><br />
 		</div>
 	</div>
-	<div>
+	<div id = "main" >
 		<%= yield %>
 	</div>
 </body>
