--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,19 @@
   <%= stylesheet_link_tag "scaffold" %>
   <%= stylesheet_link_tag "depot", :media => "all" %>
   <%= javascript_include_tag :defaults %>
+  
+  <%= form_tag store_path, :class => 'locale' do %>
+	<%= select_tag 'set_locale', options_for_select(LANGUAGES, I18n.locale.to_s), :onchange => 'this.form.submit()' %>
+	<%= submit_tag 'submit' %>
+	<%= javascript_tag "$$('.locale input').each(Element.hide)" %>
+  <% end %>
+  
   <%= csrf_meta_tag %>
 </head>
 <body id="store">
 	<div id = "banner">
 		<%= image_tag("logo.png")%>
-		<%= @page_title || "Pragmatic Bookshelf" %>
+		<%= @page_title || t('.title') %>
 	</div>
 	<div id="columns">
 		<div id="side">
@@ -19,10 +26,10 @@
 					<%= render @cart %>
 				<% end %>
 			<% end %>
-			<a href="http://www....">Home</a><br />
-			<a href="http://www..../faq">Questions</a><br />
-			<a href="http://www..../news">News</a><br />
-			<a href="http://www..../contact">Contact</a><br />
+			<a href="http://www...."><%= t('.home') %></a><br />
+			<a href="http://www..../faq"><%= t('.questions') %></a><br />
+			<a href="http://www..../news"><%= t('.news') %></a><br />
+			<a href="http://www..../contact"><%= t('.contact') %></a><br />
 			
 			<% if session[:user_id] %>
 				<br />
